; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_thread_tools.c_mp_cancel_set_cb.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_thread_tools.c_mp_cancel_set_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_cancel = type { void (i8*)*, i32, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_cancel_set_cb(%struct.mp_cancel* %0, void (i8*)* %1, i8* %2) #0 {
  %4 = alloca %struct.mp_cancel*, align 8
  %5 = alloca void (i8*)*, align 8
  %6 = alloca i8*, align 8
  store %struct.mp_cancel* %0, %struct.mp_cancel** %4, align 8
  store void (i8*)* %1, void (i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.mp_cancel*, %struct.mp_cancel** %4, align 8
  %8 = getelementptr inbounds %struct.mp_cancel, %struct.mp_cancel* %7, i32 0, i32 1
  %9 = call i32 @pthread_mutex_lock(i32* %8)
  %10 = load void (i8*)*, void (i8*)** %5, align 8
  %11 = load %struct.mp_cancel*, %struct.mp_cancel** %4, align 8
  %12 = getelementptr inbounds %struct.mp_cancel, %struct.mp_cancel* %11, i32 0, i32 0
  store void (i8*)* %10, void (i8*)** %12, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load %struct.mp_cancel*, %struct.mp_cancel** %4, align 8
  %15 = getelementptr inbounds %struct.mp_cancel, %struct.mp_cancel* %14, i32 0, i32 2
  store i8* %13, i8** %15, align 8
  %16 = load %struct.mp_cancel*, %struct.mp_cancel** %4, align 8
  %17 = call i32 @retrigger_locked(%struct.mp_cancel* %16)
  %18 = load %struct.mp_cancel*, %struct.mp_cancel** %4, align 8
  %19 = getelementptr inbounds %struct.mp_cancel, %struct.mp_cancel* %18, i32 0, i32 1
  %20 = call i32 @pthread_mutex_unlock(i32* %19)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @retrigger_locked(%struct.mp_cancel*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
